# cable-length-cutter

./: .gitignore  CMakeLists.txt  README.md  connection-plan.drawio  function-diagram.drawio  sdkconfig  wire-labels.fods
cad/: assembly_all-parts.FCStd
cad/box/: box-holder_v1.0.FCStd  box_v1.0.FCStd
cad/cable-mounts/: clamps-startButtons.FCStd  mounts-item.FCStd
cad/cnc-guide/: axis-mount.stl  axis_mounts.FCStd
cad/cutter/: angle-bracket_v2.0.FCStd  cutter-mount_2.2.FCStd
cad/emergency-sw/: sw_holder_v1.0.FCStd
cad/encoder/: disk-flat_SE.par  disk-flat_SE.stl  disk-half_SE.par  holder_v1.0.FCStd  holder_v2.0.FCStd  holder_v3.2.FCStd
cad/guides/: distance-rings.FCStd  guide-cutter_spacer.FCStd  guide-cutter_v1.0.FCStd  guide-cutter_v2.0.FCStd  guide-cutter_v3.0.FCStd  guide-cutter_v4.2.FCStd  guide-cutter_v5.0.FCStd  guide-cutter_v5.1.FCStd  guide-in-long-rolls_SE.par  guide-in-long-rolls_SE.stl  guide-in-long_SE.par  guide-in-long_SE.stl  guide-in_v1.0.FCStd  guide-in_v1.1.FCStd  guide-in_v2.1.FCStd
cad/reel/: cable-reel_v1_SE.par  cable-reel_v2.1.FCStd  cable-reel_v2.2.2.FCStd  cable-reel_v2.2.FCStd
main/: CMakeLists.txt  buzzer.cpp  buzzer.hpp  config.cpp  config.h  config.hpp  control.cpp  control.hpp  cutter.cpp  cutter.hpp  display.cpp  display.hpp  encoder.cpp  encoder.hpp  global.cpp  global.hpp  guide-stepper.cpp  guide-stepper.hpp  main.c  main.cpp  shutdown.cpp  shutdown.hpp  stepper.cpp  stepper.hpp  switchesAnalog.cpp  switchesAnalog.hpp  vfd.cpp  vfd.hpp
pcb/: 4swToAdc.kicad_prl  4swToAdc_stripboard-calc.ods
testing/cnc-guide/: main.c  (+1 more)
(+16 files in other folders)
